deployment.yml

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  selector:
    app: horizon
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: backend
          image: gcr.io/horizon-c09/backend:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: horizon
      tier: frontend
  template:
    metadata:
      labels:
        app: horizon
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/horizon-c09/frontend:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
