ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horizon-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: horizon-ingress
    networking.gke.io/managed-certificates: horizon-managed-cert
spec:
  rules:
  - host: horizon.mohamedhalat.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: nestjs
              port:
                number: 3000
